WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62460
REGRESSION (
r88332
): prototype-inheritance-2 ASSERTS attempting to enumerate spellCheckRanges
https://bugs.webkit.org/show_bug.cgi?id=62460
Summary
REGRESSION (r88332): prototype-inheritance-2 ASSERTS attempting to enumerate ...
WebKit Review Bot
Reported
2011-06-10 08:45:37 PDT
REGRESSION (
r88332
): prototype-inheritance-2 ASSERTS attempting to enumerate spellCheckRanges Requested by dglazkov on #webkit.
Attachments
Patch
(1.52 KB, patch)
2011-06-10 10:15 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-06-10 08:48:58 PDT
The problem is fairly obvious from looking at the stack trace. Please fix. ASSERTION FAILED: !HashTranslator::equal(KeyTraits::emptyValue(), key) Backtrace: [0x01555675+133] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\javascriptcore\wtf\hashtable.h:467) [0x0155498F+47] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\javascriptcore\wtf\hashtable.h:483) WTF::HashMap<WTF::RefPtr<WebCore::Node>,WTF::Vector<WebCore::RenderedDocumentMarker,0> *,WTF::PtrHash<WTF::RefPtr<WebCore::Node> >,WTF::HashTraits<WTF::RefPtr<WebCore::Node> >,WTF::HashTraits<WTF::Vector<WebCore::RenderedDocumentMarker,0> *> >::inlineGet [0x01553C73+35] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\javascriptcore\wtf\refptrhashmap.h:274) WTF::HashMap<WTF::RefPtr<WebCore::Node>,WTF::Vector<WebCore::RenderedDocumentMarker,0> *,WTF::PtrHash<WTF::RefPtr<WebCore::Node> >,WTF::HashTraits<WTF::RefPtr<WebCore::Node> >,WTF::HashTraits<WTF::Vector<WebCore::RenderedDocumentMarker,0> *> >::get [0x01551CCA+26] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\javascriptcore\wtf\refptrhashmap.h:285) WebCore::DocumentMarkerController::userSpellingMarkersForNode [0x0155077E+78] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\dom\documentmarkercontroller.cpp:663) WebCore::HTMLInputElement::spellcheckRanges [0x0217D66C+44] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\html\htmlinputelement.cpp:1849) WebCore::HTMLInputElementInternal::spellcheckRangesAttrGetter [0x0214FE61+65] (e:\b\build\slave\webkit_win__dbg__1_\build\src\webkit\debug\obj\global_intermediate\webcore\bindings\v8htmlinputelement.cpp:638) v8::internal::Object::GetPropertyWithCallback [0x0051D1F5+421] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\objects.cc:204) v8::internal::Object::GetProperty [0x0051E938+744] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\objects.cc:576) v8::internal::Object::GetPropertyWithReceiver [0x0051CFE9+89] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\objects.cc:165) v8::internal::Object::GetProperty [0x0046DD6E+46] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\objects-inl.h:847) v8::internal::Runtime::GetObjectProperty [0x005F28A2+466] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\runtime.cc:3752) v8::internal::Runtime_KeyedGetProperty [0x005F2E39+969] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\runtime.cc:3834) (No symbol) [0x260600B6] (No symbol) [0x2607D739] (No symbol) [0x25250A21] (No symbol) [0x25259932] (No symbol) [0x2607311A] (No symbol) [0x26063D6B] v8::internal::Invoke [0x004DDA3C+412] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\execution.cc:122) v8::internal::Execution::Call [0x004DD82C+140] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\execution.cc:158) v8::Script::Run [0x0046BBEC+524] (e:\b\build\slave\webkit_win__dbg__1_\build\src\v8\src\api.cc:1552) WebCore::V8Proxy::runScript [0x013CEFD7+391] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\bindings\v8\v8proxy.cpp:435) WebCore::V8Proxy::evaluate [0x013CEA71+497] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\bindings\v8\v8proxy.cpp:389) WebCore::ScriptController::evaluate [0x014F9346+214] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\bindings\v8\scriptcontroller.cpp:243) WebCore::ScriptElement::executeScript [0x01895E6E+318] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\dom\scriptelement.cpp:277) WebCore::HTMLScriptRunner::executePendingScriptAndDispatchEvent [0x022489AE+286] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\html\parser\htmlscriptrunner.cpp:140) WebCore::HTMLScriptRunner::executeParsingBlockingScript [0x022485F0+256] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\html\parser\htmlscriptrunner.cpp:119) WebCore::HTMLScriptRunner::executeParsingBlockingScripts [0x02248DEF+63] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\html\parser\htmlscriptrunner.cpp:196) WebCore::HTMLScriptRunner::executeScriptsWaitingForLoad [0x02248EEB+219] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\html\parser\htmlscriptrunner.cpp:207) WebCore::HTMLDocumentParser::notifyFinished [0x021DA2BC+300] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\html\parser\htmldocumentparser.cpp:521) WebCore::CachedResource::checkNotify [0x015160CE+110] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\loader\cache\cachedresource.cpp:152) WebCore::CachedScript::data [0x0188773C+140] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\loader\cache\cachedscript.cpp:105) WebCore::CachedResourceRequest::didFinishLoading [0x017B20A5+341] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\loader\cache\cachedresourcerequest.cpp:163) WebCore::SubresourceLoader::didFinishLoading [0x018CF671+161] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\loader\subresourceloader.cpp:197) WebCore::ResourceLoader::didFinishLoading [0x017C2887+39] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webcore\loader\resourceloader.cpp:449) WebCore::ResourceHandleInternal::didFinishLoading [0x0228B4B0+144] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\source\webkit\chromium\src\resourcehandle.cpp:190) webkit_glue::WebURLLoaderImpl::Context::OnCompletedRequest [0x00B443BB+523] (e:\b\build\slave\webkit_win__dbg__1_\build\src\webkit\glue\weburlloader_impl.cc:662) `anonymous namespace'::RequestProxy::NotifyCompletedRequest [0x00AC4019+57] (e:\b\build\slave\webkit_win__dbg__1_\build\src\webkit\tools\test_shell\simple_resource_loader_bridge.cc:274) [0x00ACB641+33] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\tuple.h:564) [0x00AC9D65+53] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\task.h:338) `anonymous namespace'::TaskClosureAdapter::Run [0x01E03A02+50] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:102) base::internal::Invoker1<0,base::internal::InvokerStorage1<void (__thiscall `anonymous namespace'::TaskClosureAdapter::*)(void),A0x17a47d7c::TaskClosureAdapter *>,void (__thiscall `anonymous namespace'::TaskClosureAdapter::*)(void)>::DoInvoke [0x01E0EAAD+45] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\bind_internal.h:547) base::Callback<void __cdecl(void)>::Run [0x01E0636F+47] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\callback.h:261) MessageLoop::RunTask [0x01E050C5+293] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:484) MessageLoop::DeferOrRunPendingTask [0x01E05213+51] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:503) MessageLoop::DoWork [0x01E05BED+221] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:691) base::MessagePumpForUI::DoRunLoop [0x01E67154+84] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_pump_win.cc:203) base::MessagePumpWin::RunWithDispatcher [0x01E66A22+130] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_pump_win.cc:51) base::MessagePumpWin::Run [0x01E66C8C+28] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_pump_win.h:80) MessageLoop::RunInternal [0x01E04DE7+247] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:449) MessageLoop::RunHandler [0x01E04BBE+46] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:423) MessageLoop::Run [0x01E044CA+58] (e:\b\build\slave\webkit_win__dbg__1_\build\src\base\message_loop.cc:347) webkit_support::RunMessageLoop [0x008D812F+15] (e:\b\build\slave\webkit_win__dbg__1_\build\src\webkit\support\webkit_support.cc:376) TestShell::waitTestFinished [0x0042C4ED+141] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\tools\dumprendertree\chromium\testshellwin.cpp:106) TestShell::runFileTest [0x0044637F+479] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\tools\dumprendertree\chromium\testshell.cpp:225) runTest [0x0041B23D+733] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\tools\dumprendertree\chromium\dumprendertree.cpp:125) main [0x0041AA38+2232] (e:\b\build\slave\webkit_win__dbg__1_\build\src\third_party\webkit\tools\dumprendertree\chromium\dumprendertree.cpp:248) __tmainCRTStartup [0x00A69B37+279] (f:\dd\vctools\crt_bld\self_x86\crt\src\crt0.c:266) mainCRTStartup [0x00A69A0F+15] (f:\dd\vctools\crt_bld\self_x86\crt\src\crt0.c:182) RegisterWaitForInputIdle [0x7C817077+73]
Dimitri Glazkov (Google)
Comment 2
2011-06-10 10:15:05 PDT
Created
attachment 96754
[details]
Patch
WebKit Review Bot
Comment 3
2011-06-10 10:57:04 PDT
Comment on
attachment 96754
[details]
Patch Clearing flags on attachment: 96754 Committed
r88551
: <
http://trac.webkit.org/changeset/88551
>
WebKit Review Bot
Comment 4
2011-06-10 10:57:08 PDT
All reviewed patches have been landed. Closing bug.
Hironori Bono
Comment 5
2011-06-12 18:35:01 PDT
Greetings Dimitri, Apologies for my bonehead mistake and thank you so much for fixing it. Regards, Hironori Bono
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug