2011-06-10  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Tony Chang.

        REGRESSION (r88332): prototype-inheritance-2 ASSERTS attempting to enumerate spellCheckRanges
        https://bugs.webkit.org/show_bug.cgi?id=62460

        Test: fast/dom/prototype-inheritance-2.html

        * dom/DocumentMarkerController.cpp:
        (WebCore::DocumentMarkerController::userSpellingMarkersForNode): Added an extra 0-check.

Canonical link: https://commits.webkit.org/77956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88551 268f45cc-cd09-0410-ab3c-d52691b4dbfc